syntax = "proto3";
package sg.flow.common.v1;

option java_multiple_files = true;
option java_package        = "sg.flow.common.v1";
option java_outer_classname = "FullCardProto";

import "common/v1/bank.proto";
import "common/v1/brief_card.proto";

message Card {
    int64    id          = 1;
    string   card_number = 2;
    CardType card_type   = 3;
    string   card_name   = 4;
    Bank     bank        = 5;
    double   balance     = 6;
}